# zenn

./: .gitignore  .textlintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
articles/: 04d59166a18330.md  0714d99eb7ecfd.md  1eba42d91c949b.md  276adab8a1f1ca.md  31413a2d0ce3ef.md  3954bdd1b775e7.md  533b97e8a9c4a9.md  5b22ae491189a5.md  67c336eb4f92e2.md  6b031dd2d134bf.md  6c793694943f47.md  79d2c4190f7065.md  9839e277bc1332.md  b023ff21abf57d.md  ca13576b165765.md  d67c9e05845ba5.md
books/b48ce762bff8fe/: 1_preface.md  2_what_is_fp.md  config.yaml
books/eea8f12a53bbad/: afterword.md  config.yaml  fp_with_openai_api_call.md  introduce_typing.md  introduction.md  references.md
groceries/31413a2d0ce3ef/: app.py  requirements.txt
groceries/ca13576b165765/: ca13576b165765-note.md  note.md
notes/: architect-check-list.md
py-dev/: parser.py  py_with_fp.py
